# scli

./: Cargo.toml
src/: main.rs
