[package]
name = "scli"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scientist-api-sdk = { git = "https://github.com/xrl/scientist-rust-sdk.git" }
tokio = "0.2.11"